--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 </head>
 <body>
   <div class="card">
-    <h5 class="card-header">Short URL By Nahida, Powered by Cloudflare Workers</h5>
+    <h5 class="card-header">Short URL By Nahida</h5>
     <div class="card-body">
       <form>
       <h5 class="card-title">Input Raw URL: </h5>
