--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!doctype html>
 <html>
+
 <head>
   <meta http-equiv="content-type" content="txt/html; charset=utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha256-L/W5Wfqfa0sdBNIKN9cG6QA5F2qx4qICmU2VgLruv9Y=" crossorigin="anonymous">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+    integrity="sha256-L/W5Wfqfa0sdBNIKN9cG6QA5F2qx4qICmU2VgLruv9Y=" crossorigin="anonymous">
   <title>Short URL</title>
   <meta name="description" content="简单免费搭建属于你自己的无服务器短链接平台">
   <style>
@@ -12,9 +15,12 @@
       padding: 0;
       cursor: default;
     }
-    html, body {
+
+    html,
+    body {
       height: 100%;
     }
+
     body {
       display: -webkit-box;
       display: flex;
@@ -30,68 +36,79 @@
       background-color: #ebedee;
       overflow: hidden;
     }
+
     .card {
       background-color: transparent;
       width: 768px;
     }
+
     .card-text {
       text-align: center;
     }
-    .card-text > a {
+
+    .card-text>a {
       text-decoration: none;
       color: #007bff;
     }
-    .card-text > a {
+
+    .card-text>a {
       cursor: pointer;
     }
+
     .form-control {
-        cursor: auto;
+      cursor: auto;
     }
+
     @media (max-width: 769px) {
       .card {
         width: 80%;
       }
     }
+
     @media (max-width: 420px) {
       .card {
         width: 95%;
       }
     }
-    @media (prefers-color-scheme: dark) { 
+
+    @media (prefers-color-scheme: dark) {
       body {
-        color: #d9d9d9; 
+        color: #d9d9d9;
         background: #1b1b1b;
       }
+
       .card {
         background-color: #252d38;
       }
-    } 
+    }
   </style>
 </head>
+
 <body>
   <div class="card">
     <h5 class="card-header">Short URL By Nahida</h5>
     <div class="card-body">
       <form>
-      <h5 class="card-title">Input Raw URL: </h5>
-      <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="https://example.com/path?key=urlEncodedValue" id="text">
-        <div class="input-group-append">
-          <button class="btn btn-primary" type="submit" onclick='shorturl()' id="searchbtn">Short!</button>
+        <h5 class="card-title">Input Raw URL: </h5>
+        <div class="input-group mb-3">
+          <input type="text" class="form-control" placeholder="https://example.com/path?key=urlEncodedValue" id="text">
+          <div class="input-group-append">
+            <button class="btn btn-primary" type="submit" onclick='shorturl()' id="searchbtn">Short!</button>
+          </div>
         </div>
-      </div>    
-      <div class="card-text">
-        <a href="https://github.com/###GITHUB_REPO###/" target="_self">Fork me on GitHub</a>
-      </div>
-      <p id="notice">###DEMO_NOTICE###</p>             
-      <p>
-      <input id="key" type="text" style="background-color:transparent;border:0;" />
-      <input id="password" type="password" style="background-color:transparent;border:0;" />
-      </p>
+        <h5 class="card-title">Input Custom path(Optional): </h5>
+        <p>
+          <input id="key" type="text" />
+        </p>
+        <div class="card-text">
+          <a href="https://github.com/###GITHUB_REPO###/" target="_self">Fork me on GitHub</a>
+        </div>
+        <p id="notice">###DEMO_NOTICE###</p>
       </form>
     </div>
   </div>
-  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -102,16 +119,24 @@
         </div>
         <div class="modal-body" id="result">No result</div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-primary" onclick='copyurl("result")' data-toggle="popover" data-placement="bottom" data-content="Copied!">Copy</button>
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>    
+          <button type="button" class="btn btn-primary" onclick='copyurl("result")' data-toggle="popover"
+            data-placement="bottom" data-content="Copied!">Copy</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
-  </div>         
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha256-WqU1JavFxSAMcLP2WIOI+GB2zWmShMI82mTpLDcqFUg=" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/blueimp-md5@2.18.0/js/md5.min.js" integrity="sha256-cpbDsuAF6YYKGsywuE65CvzsMKN6x4m6733ZnT3QHHE=" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/gh/###GITHUB_REPO######GITHUB_VERSION###/main.min.js" crossorigin="anonymous"></script>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.slim.min.js"
+    integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
+    integrity="sha256-WqU1JavFxSAMcLP2WIOI+GB2zWmShMI82mTpLDcqFUg=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/blueimp-md5@2.18.0/js/md5.min.js"
+    integrity="sha256-cpbDsuAF6YYKGsywuE65CvzsMKN6x4m6733ZnT3QHHE=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/gh/###GITHUB_REPO######GITHUB_VERSION###/main.min.js"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
