--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <button class="btn btn-primary" type="submit" onclick='shorturl()' id="searchbtn">Short!</button>
           </div>
         </div>
-        <h5 class="card-title">Input Custom path(Optional): </h5>
+        <h5 class="form-control" placeholder="https://nahida.icu/Path">Input Custom Path (Optional): </h5>
         <p>
           <input id="key" type="text" />
         </p>
