--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
             <button class="btn btn-primary" type="submit" onclick='shorturl()' id="searchbtn">Short!</button>
           </div>
         </div>
-        <h5 class="form-control" placeholder="https://nahida.icu/Path">Input Custom Path (Optional): </h5>
+        <h5 class="card-title">Input Custom Path (Optional): </h5>
         <p>
-          <input id="key" type="text" />
+          <input id="key" class="form-control" type="text" placeholder="https://nahida.icu/Path" />
         </p>
         <div class="card-text">
           <a href="https://github.com/###GITHUB_REPO###/" target="_self">Fork me on GitHub</a>
