--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
         <h5 class="card-title">Input Custom Path (Optional): </h5>
         <p>
-          <input id="key" class="form-control" type="text" placeholder="https://nahida.icu/Path" />
+          <input id="key" class="form-control" type="text" placeholder="Shorturl would be like https://nahida.icu/Path" />
         </p>
         <div class="card-text">
           <a href="https://github.com/###GITHUB_REPO###/" target="_self">Fork me on GitHub</a>
