--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     integrity="sha256-WqU1JavFxSAMcLP2WIOI+GB2zWmShMI82mTpLDcqFUg=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/blueimp-md5@2.18.0/js/md5.min.js"
     integrity="sha256-cpbDsuAF6YYKGsywuE65CvzsMKN6x4m6733ZnT3QHHE=" crossorigin="anonymous"></script>
-  <script src="https://raw.githubusercontent.com/CHxCOOH/Url-Shorten-Worker/main/main.js"
+  <script src="https://cdn.jsdelivr.net/gh/###GITHUB_REPO######GITHUB_VERSION###/main.min.js"
     crossorigin="anonymous"></script>
 </body>
 
